--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "teams"
   ],
   "author": "mic0 <https://mic0.me>",
-  "license": "ODbL-1.0",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/mic0ishere/teams-notifications/issues"
   },
