--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ms-teams",
     "teams"
   ],
-  "author": "mic0 <https://mic0.me>",
+  "author": "mic0",
   "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/mic0ishere/teams-notifications/issues"
