fix api permissions

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 OAUTH_APP_ID=YOUR_APP_ID_HERE
 OAUTH_APP_SECRET=YOUR_CLIENT_SECRET_HERE
 OAUTH_SCOPES='user.read,calendars.readwrite'
-OAUTH_AUTHORITY=https://login.microsoftonline.com/common/
+OAUTH_AUTHORITY=https://login.microsoftonline.com/YOUR_TENANT_ID_HERE
 PORT=3000
+TIMEZONE=GMT+2
