--- a/example.env
+++ b/example.env
@@ -3,4 +3,4 @@ OAUTH_APP_SECRET=YOUR_CLIENT_SECRET_HERE
 OAUTH_SCOPES='user.read,calendars.readwrite'
 OAUTH_AUTHORITY=https://login.microsoftonline.com/YOUR_TENANT_ID_HERE
 PORT=3000
-TIMEZONE=GMT+2
+TIMEZONE=Europe/Warsaw
